[package]
name = "sticky"
version = "0.9.0"
edition = "2021"
description = "A simple note management CLI."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
directories-next = "2.0.0"
owo-colors = "3.4.0"