[package]
name = "sticky"
version = "1.0.0"
edition = "2021"
description = "A simple note management CLI."
authors = ["moddedBear<modbear@proton.me>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/moddedBear/sticky"
keywords = ["cli", "notes"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
directories-next = "2.0.0"
owo-colors = "3.4.0"